Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.6(EOL), 10.11, 11.4, 11.8
-
Can result in data loss
-
Crash recovery may fail after a crash during an instant ALTER TABLE…PAGE_COMPRESSED=1. Fix: make the operation rebuild the table.
-
Q1/2026 Server Development, Q1/2026 Server Maintenance
Description
Recovery issue found while testing MDEV-38069
|
origin/MDEV-38069 ac77558ba4024cd78a0e12a8364afb105767cdcc |
# 2025-11-12T06:08:15 [222821] | 2025-11-12 6:07:38 0 [Note] InnoDB: Starting crash recovery from checkpoint LSN=163355037
|
# 2025-11-12T06:08:15 [222821] | 2025-11-12 6:07:39 0 [Note] InnoDB: Multi-batch recovery needed at LSN 166004433
|
# 2025-11-12T06:08:15 [222821] | 2025-11-12 6:07:39 0 [Note] InnoDB: End of log at LSN=171425101
|
# 2025-11-12T06:08:15 [222821] | 2025-11-12 6:07:40 0 [Note] InnoDB: To recover: LSN 166004433/171425101; 681 pages
|
# 2025-11-12T06:08:15 [222821] | 2025-11-12 6:07:40 0 [ERROR] InnoDB: Space id and page no stored in the page, read in from ./test/t6.ibd are [page id: space=487059695, page number=7], should be [page id: space=181, page number=7]
|
# 2025-11-12T06:08:15 [222821] | 2025-11-12 6:07:40 0 [Note] InnoDB: Set innodb_force_recovery=1 to ignore corrupted pages.
|
# 2025-11-12T06:08:15 [222821] | 2025-11-12 6:07:40 0 [ERROR] InnoDB: Unable to apply log to corrupted page 7 in file ./test/t6.ibd
|
# 2025-11-12T06:08:15 [222821] | 2025-11-12 6:07:40 0 [Note] InnoDB: Set innodb_force_recovery=1 to ignore corrupted pages.
|
# 2025-11-12T06:08:15 [222821] | 2025-11-12 6:07:40 0 [ERROR] InnoDB: Plugin initialization aborted at srv0start.cc[1482] with error Generic error
|
# 2025-11-12T06:08:15 [222821] | 2025-11-12 6:07:40 0 [Note] InnoDB: Starting shutdown...
|
# 2025-11-12T06:08:15 [222821] | 2025-11-12 6:07:41 0 [ERROR] Plugin 'InnoDB' registration as a STORAGE ENGINE failed.
|
RR trace is present on SDP:-
/data/results/1762937427/TBR-1520